# FxSocket

./: .gitignore  README.md
projects/HGxGPAplication/HGxGPAplication/: CMakeLists.txt
projects/HGxGPAplication/HGxGPAplication/Apps/: CMakeLists.txt  FreeXSim.rar
projects/HGxGPAplication/HGxGPAplication/Apps/FrameLogin/: CMakeLists.txt  LoginUI.cpp  LoginUI.h  image.qrc  main.cpp
projects/HGxGPAplication/HGxGPAplication/Apps/FreeXAcmiParse/: ACMIDataParse.cpp  ACMIDataParse.h  CMakeLists.txt  FlyEventParse.cpp  FlyEventParse.h  acmiparse.cpp  acmiparse.h  acmiparse.qrc  acmiparse.ui  main.cpp
projects/HGxGPAplication/HGxGPAplication/Apps/FreeXSim/: CMakeLists.txt  ConfigMgr.cpp  ConfigMgr.h  EntityObjSim.cpp  EntityObjSim.h  FreeXSim.cpp  FreeXSim.h  FreeXSim.qrc  FreeXSimSceneParse.cpp  FreeXSimSceneParse.h  FreeXSimWidget.ui  MathCalc.cpp  MathCalc.h  MultiCast.cpp  MultiCast.h  RadarGenSim.cpp  RadarGenSim.h  SimData.cpp  SimData.h  SimDataParse.cpp  SimDataParse.h  SimStructDef.h  SimTimer.cpp  SimTimer.h  StructDef.h  main.cpp
projects/HGxGPAplication/HGxGPAplication/Apps/HGxGPApplication/: CMakeLists.txt  GxProcessor.cpp  GxProcessor.h  HGxGPApplicationMain.cpp  LoginUI.cpp  LoginUI.h  login.qss  target_libraries.cmake
projects/HGxGPAplication/HGxGPAplication/Apps/HGxPluginGenerator/: CMakeLists.txt  DefaultLicense.txt  GxPluginGenerator.cpp  GxPluginGeneratorMainWindow.ui  GxPluginGeneratorOptionsDialog.cpp  GxPluginGeneratorOptionsDialog.ui  GxPluginGeneratorOptionsDialog_p.h  GxPluginGenerator_p.h  HGxPluginGeneratorMain.cpp  target_libraries.cmake
projects/HGxGPAplication/HGxGPAplication/Apps/HGxTestCase/: CMakeLists.txt  GxMainWindow.cpp  GxMainWindow.h  GxMainWindow.qrc  GxMainWindow.ui  HGxTestCaseMain.cpp  target_libraries.cmake
projects/HGxGPAplication/HGxGPAplication/CMake/: GxGPAppConfig.h.in  HGxMacroBuildLib.cmake  HGxMacroBuildPlugin.cmake
projects/HGxGPAplication/HGxGPAplication/CMakeModules/: Find3rdPartyDependencies.cmake  FindHGBDP.cmake  FindHGGDP.cmake  find_hg_gdal.cmake  find_hg_osgEarth.cmake
projects/HGxGPAplication/HGxGPAplication/Libs/: CMakeLists.txt  HGxExport.h.in
projects/HGxGPAplication/HGxGPAplication/Libs/DataResUtilUi/: CMakeLists.txt  GxDataResWnd.qrc--  GxDataResourcesUtils.cpp  GxLinkFileWindow.cpp  GxLinkFileWindow.ui  GxServerDataWindow.cpp  GxServerDataWindow.ui
projects/HGxGPAplication/HGxGPAplication/Libs/FreeXCommonToolUi/: CMakeLists.txt
projects/HGxGPAplication/HGxGPAplication/Libs/HGxPFWCore/: CMakeLists.txt  GxEventHelperImpl.cpp  GxEventHelperImpl.h  GxEventHelperInterface.h  GxPluginFrameworkCore.cpp  GxPluginFrameworkCore.h  GxPluginFwLauncherImpl.cpp  GxPluginFwLauncherImpl.h  GxPluginFwLauncherInterface.h  GxServiceQuerier.h  target_libraries.cmake
projects/HGxGPAplication/HGxGPAplication/Libs/HGxPluginGeneratorCore/: CMakeLists.txt  GxPluginGeneratorAbstractExtension.cpp  GxPluginGeneratorAbstractExtension.h  GxPluginGeneratorAbstractTemplate.cpp  GxPluginGeneratorAbstractTemplate.h  GxPluginGeneratorCMakeLists.cpp  GxPluginGeneratorCMakeLists.h  GxPluginGeneratorCodeModel.cpp  GxPluginGeneratorCodeModel.h  GxPluginGeneratorConstants.cpp  GxPluginGeneratorConstants.h  GxPluginGeneratorCorePlugin.cpp  GxPluginGeneratorCorePlugin_p.h  GxPluginGeneratorCppPluginActivator.cpp  GxPluginGeneratorCppPluginActivator.h  GxPluginGeneratorCppTemplate.cpp  GxPluginGeneratorCppTemplate.h  GxPluginGeneratorHeaderTemplate.cpp  GxPluginGeneratorHeaderTemplate.h  GxPluginGeneratorTargetLibraries.cpp  GxPluginGeneratorTargetLibraries.h  target_libraries.cmake
projects/HGxGPAplication/HGxGPAplication/Libs/HGxPluginGeneratorUI/: CMakeLists.txt  GxPluginGeneratorAbstractUiExtension.cpp  GxPluginGeneratorAbstractUiExtension.h  GxPluginGeneratorMainExtension.cpp  GxPluginGeneratorMainExtension.h  GxPluginGeneratorManifestExtension.ui  GxPluginGeneratorUiPlugin.cpp  GxPluginGeneratorUiPlugin_p.h  target_libraries.cmake
projects/HGxGPAplication/HGxGPAplication/Libs/PluginFrameworkCore/: CMakeLists.txt
projects/HGxGPAplication/HGxGPAplication/Libs/PluginGeneratorCore/: CMakeLists.txt
projects/HGxGPAplication/HGxGPAplication/Libs/PluginGeneratorUI/: CMakeLists.txt  GxPluginGeneratorAbstractUiExtension.cpp  GxPluginGeneratorAbstractUiExtension.cpp.bak  GxPluginGeneratorAbstractUiExtension.h  GxPluginGeneratorMainExtension.cpp  GxPluginGeneratorMainExtension.cpp.bak  GxPluginGeneratorMainExtension.h  GxPluginGeneratorMainExtension.ui  GxPluginGeneratorMainExtension.ui.bak  GxPluginGeneratorManifestExtension.ui  GxPluginGeneratorUiPlugin.cpp.bak  GxPluginGeneratorUiPlugin_p.h  manifest_headers.cmake  target_libraries.cmake
projects/HGxGPAplication/HGxGPAplication/Libs/SceneDndManager/: CMakeLists.txt  CSceneDndManager.cpp  CSceneDndManager_p.h
projects/HGxGPAplication/HGxGPAplication/Libs/ServiceModelUtilUi/: CMakeLists.txt  GxServiceModelUtilUi.cpp  GxServiceModelUtilUi.qrc
projects/HGxGPAplication/HGxGPAplication/Libs/ServiceUtilUi/: CMakeLists.txt  GxAddDataSetWindow.cpp  GxAddDataSetWindow.h  GxAddDataSetWindow.ui  GxAddDataSetWindow.ui.bak  GxAddOGCWindow.cpp  GxAddOGCWindow.h  GxAddOGCWindow.ui  GxAddOGCWindow.ui.bak  GxAddServiceMgr.cpp  GxAddServiceMgr.h  GxAddTileWindow.cpp  GxAddTileWindow.h  GxAddTileWindow.ui  GxAddTileWindow.ui.bak  GxDataSetLayerProWindow.cpp  GxDataSetLayerProWindow.h  GxDataSetLayerProWindow.ui  GxDataSetLayerProWindow.ui.bak  GxLimitLineEdit.cpp  GxLimitLineEdit.h  GxOGCLayerProWindow.cpp  GxOGCLayerProWindow.h  GxOGCLayerProWindow.ui  GxOGCLayerProWindow.ui.bak  GxOGCLayerSetProWindow.cpp  GxOGCLayerSetProWindow.h  GxOGCLayerSetProWindow.ui  GxOGCLayerSetProWindow.ui.bak  GxServerProUtils.cpp  GxServerProUtils.qrc  GxServiceProWgt.cpp  GxServiceProWgt.ui  GxServiceProWgt.ui.bak  GxTileLayerProWindow.cpp  GxTileLayerProWindow.h  GxTileLayerProWindow.ui  GxTileLayerProWindow.ui.bak
projects/HGxGPAplication/HGxGPAplication/Plugins/: com.henggetec.driveMgrInterfacePlugin.rar  com.henggetec.uiFramework.rar
projects/HGxGPAplication/HGxGPAplication/Plugins/com.henggetec.log/: GxLog.h  (+7 more)
(+819 files in other folders)
